generated/fralex-life/fralex-life-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fralex-life
  namespace: fralex-life
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
  selector:
    app.kubernetes.io/name: fralex-life
